--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
-{#    <link href="{% static 'page/css/base.css' %}" rel="stylesheet" type="text/css">#}
+    <link href="{% static 'page/css/base.css' %}" rel="stylesheet" type="text/css">
     <title>{% block title %}{% endblock %}</title>
     <script src="//code.jquery.com/jquery-1.12.4.js"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -26,7 +26,7 @@
 </head>
 <body>
 {#    <h1>Base.html</h1><hr>#}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="{% url 'home' %}" style="font-family: 'Roboto', sans-serif;color: rgb(255, 153, 0); text-shadow: 1px 1px 1px gray; font-size: 25px;">LIKELION CAMP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
