--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -20,19 +20,37 @@
         </header>
         <main class="shell-body">
             <h2>공지사항</h2>
-            {% if notice.author == superuser %}
-            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);">공지사항 추가</a><br>
-            {% endif %}
             
+            
+         
+            {% for notice in notices.all reversed %}
+            {% if forloop.counter == 1 %}
+            <p><a href="{%url 'noticedetail' notice.id %}" style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
+                <br>
+                </p>
+            {% endif %}
+            {% endfor %}
+          
+            
+
+            <details>
+            <summary>공지 더보기</summary>  
             {% for notice in notices.all reversed %}
             <p><a href="{%url 'noticedetail' notice.id %}" style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
                 <br>
                 </p>
             {% endfor %}
+        </details>
+        {% if notices.author == superuser %}
+            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);">공지사항 추가</a><br>
+            {% endif %}
         </main>
+        
         <footer class="shell-footer">
                 <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn orange">제 출 하 기</a>
+            
                 
+                    
             {% for post in posts.all reversed %}
             <a href="{%url 'detail' post.id %}" style="color: rgb(158, 158, 158);">{{post.title}}</a>
             <a style="color: rgb(235, 164, 33);">【</a>{{post.author}}<a style="color: rgb(235, 164, 33);">】</a>
@@ -40,6 +58,8 @@
             
             <br>
             {% endfor %} 
+            
+            
         </footer>
       </div>
     
