--- a/homework/templates/detail.html
+++ b/homework/templates/detail.html
@@ -26,8 +26,8 @@
     {% endif %}
     <div class="box">
     {% if post.author == user %}
-    <a href="{% url 'edit' post.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8);">&nbsp수정&nbsp</a>
-    &nbsp&nbsp&nbsp<a href="{% url 'delete' post.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8);">&nbsp삭제&nbsp</a>
+    <a href="{% url 'edit' post.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8); font-size: 20px;">&nbsp수정&nbsp</a>
+    &nbsp&nbsp&nbsp<a href="{% url 'delete' post.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8);font-size: 20px;">&nbsp삭제&nbsp</a>
     {% endif %}
     </div>
     
