--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -34,30 +34,66 @@
             
 
             <details>
-            <summary>공지 더보기</summary>  
+            <summary>공지 더보기</summary>
             {% for notice in notices.all reversed %}
             <p><a href="{%url 'noticedetail' notice.id %}" style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
                 <br>
                 </p>
+
+                
             {% endfor %}
+            
+            
         </details>
+        
+        
         {% if notices.author == superuser %}
             <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);">공지사항 추가</a><br>
-            {% endif %}
+        {% endif %}
+
+
+        
+         
         </main>
+
+        
+
         
         <footer class="shell-footer">
-                <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn orange">제 출 하 기</a>
+            
+                <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn orange">제 출 하 기</a><br>
+
+                {% for blog in blogs %}
+        <br>
+        <div >
+            <a href="{% url 'detail' blog.id %}">
+                {{ blog.title }}{{blog.author}}{{blog.pub_date}}
+            </a>
+         
+         
+        </div>
+        {% endfor %}
+        
+<br>
+{% if blogs.has_previous %}
+<a href="?page=1">First</a>
+<a href="?page={{blogs.previous_page_number}}">Previous</a>
+{% endif %}
+ 
+{# NowOfTotal #}
+<span>{{blogs.number}}</span>
+<span>of</span>
+<span>{{blogs.paginator.num_pages}}</span>
+ 
+{% if blogs.has_next %}
+<a href="?page={{blogs.next_page_number}}">NEXT</a>
+<a href="?page={{blogs.paginator.num_pages}}">Last</a>
+{% endif %}
             
                 
-                    
-            {% for post in posts.all reversed %}
-            <a href="{%url 'detail' post.id %}" style="color: rgb(158, 158, 158);">{{post.title}}</a>
-            <a style="color: rgb(235, 164, 33);">【</a>{{post.author}}<a style="color: rgb(235, 164, 33);">】</a>
-            {{post.pub_date}}
+               
+
             
-            <br>
-            {% endfor %} 
             
             
         </footer>
