--- a/page/static/page/css/base.css
+++ b/page/static/page/css/base.css
@@ -1,4 +1,5 @@
-a {
-    font-size: 10px;
-    color: red;
+nav.navbar a {
+    color:rgb(180, 179, 179);
+    font-family: 'Roboto', sans-serif;
+    border-bottom: 0px #666;
 }
