--- a/homework/templates/noticeedit.html
+++ b/homework/templates/noticeedit.html
@@ -19,8 +19,8 @@
     <div class="content">
         <form action="{% url 'noticeedit' notice.id %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            마감일<br>
-            <input type="date" Placeholder="mm-dd-yyyy" name="submitdate">
+            <h3>〖 마감일 〗</h3>
+            <input style="color: black;" type="date" Placeholder="mm-dd-yyyy" name="submitdate" class="date">
             <h3>〖 내용 〗</h3>
             <textarea name="content" cols="50" rows="10">{{notice.content}}</textarea>
             <br>
