--- a/homework/templates/noticedetail.html
+++ b/homework/templates/noticedetail.html
@@ -17,7 +17,8 @@
             <h1>공지사항</h1>
     </header>
     <div class="content">
-        마감일 : {{notice.submitdate}}
+        <h3>〖 마감일 〗</h3>
+        {{notice.submitdate}}
         <h3>〖 내용 〗</h3>
         {{notice.content}}
         <br>
