--- a/homework/static/homework/css/noticeedit.css
+++ b/homework/static/homework/css/noticeedit.css
@@ -50,7 +50,6 @@
   textarea{
       border: 1px solid rgba(255,255,255,.8);
       background-color: rgb(253, 161, 22);
-      color : rgba(255,255,255,.8);
       margin-bottom: 5px;
   }
   input.title{
@@ -67,4 +66,6 @@
   }
   input.date{
     color: black;
+    background-color: rgb(253, 161, 22);
+    border: 1px solid rgba(255,255,255,.8);
   }
