--- a/homework/static/homework/css/noticenew.css
+++ b/homework/static/homework/css/noticenew.css
@@ -66,3 +66,8 @@
   input{
     color : rgba(255,255,255,.8);
   }
+  input.date{
+    color: black;
+    background-color: rgb(253, 161, 22);
+    border: 1px solid rgba(255,255,255,.8);
+  }
