--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -21,14 +21,14 @@
         <main class="shell-body">
             <h2>공지사항</h2>
             {% if notices.author == superuser %}
-            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);">공지사항 추가</a><br>
+            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항 추가</a><br>
             {% endif %} 
             
          
             {% for notice in notices.all reversed %}
             {% if forloop.counter == 1 %}
             <p><a href="{%url 'noticedetail' notice.id %}" style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
-                <br>마감일 : {{notice.submitdate}}
+                <br><a style="color: red; font-weight: bold;">과제 마감 : {{notice.submitdate}}</a>
                 <br>
                 </p>
             {% endif %}
@@ -37,44 +37,36 @@
             
 
             <details>
-            <summary>공지 더보기</summary>
+            <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">공지 더보기</summary>
             {% for notice_blog in notice_blogs %}
-        <br>
-        <div >
-            <a href="{% url 'noticedetail' notice_blog.id %}">
-                {{ notice_blog.content }} <br>
-                마감일 : {{notice_blog.submitdate}}
-            </a>
-         
-         
-        </div>
-        {% endfor %}
-        
-<br>
-{% if notice_blogs.has_previous %}
-<a href="?page=1">First</a>
-<a href="?page={{notice_blogs.previous_page_number}}">Previous</a>
-{% endif %}
- 
-{# NowOfTotal #}
-<span>{{notice_blogs.number}}</span>
-<span>of</span>
-<span>{{notice_blogs.paginator.num_pages}}</span>
- 
-{% if notice_blogs.has_next %}
-<a href="?page={{notice_blogs.next_page_number}}">NEXT</a>
-<a href="?page={{notice_blogs.paginator.num_pages}}">Last</a>
-{% endif %}
-            
-            
+            <div style="margin-bottom: 10px;">
+                <a href="{% url 'noticedetail' notice_blog.id %}" style="color: rgb(90, 90, 90); font-size: 13px;">
+                    {{ notice_blog.content }} / 마감일 : {{notice_blog.submitdate}}
+                </a>
+            </div>
+            {% endfor %}
+            <div style="text-align: center; margin-top: 10px;">
+                {% if notice_blogs.has_previous %}
+                <a href="?page={{notice_blogs.previous_page_number}}" style="color: black; text-align: center; font-weight: bold;">←</a>
+                {# NowOfTotal #}
+                <span>[{{notice_blogs.number}}</span>
+                <span>/</span>
+                <span>{{notice_blogs.paginator.num_pages}}]</span>
+                {% endif %}
+                
+                
+                {% if notice_blogs.has_next %}
+                <a href="?page={{notice_blogs.paginator.num_pages}}" style="color: black; text-align: center; font-weight: bold;">←</a>
+                {# NowOfTotal #}
+                <span>[{{notice_blogs.number}}</span>
+                <span>/</span>
+                <span>{{notice_blogs.paginator.num_pages}}]</span>
+                <a href="?page={{notice_blogs.next_page_number}}" style="color: black; text-align: center; font-weight: bold;">→</a>
+                {% endif %}
+                       
+            </div> 
+               
         </details>
-        
-        
-        
-
-
-        
-         
         </main>
 
         
@@ -83,40 +75,38 @@
         <footer class="shell-footer">
             
                 <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn orange">제 출 하 기</a><br>
-
-                {% for blog in blogs %}
-        <br>
-        <div >
-            <a href="{% url 'detail' blog.id %}">
-                {{ blog.title }}{{blog.author}}{{blog.pub_date}}
-            </a>
-         
-         
-        </div>
-        {% endfor %}
-        
-<br>
-{% if blogs.has_previous %}
-<a href="?page=1">First</a>
-<a href="?page={{blogs.previous_page_number}}">Previous</a>
-{% endif %}
- 
-{# NowOfTotal #}
-<span>{{blogs.number}}</span>
-<span>of</span>
-<span>{{blogs.paginator.num_pages}}</span>
- 
-{% if blogs.has_next %}
-<a href="?page={{blogs.next_page_number}}">NEXT</a>
-<a href="?page={{blogs.paginator.num_pages}}">Last</a>
-{% endif %}
-            
+        <details>
+            <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">제출된 과제</summary>
+            {% for blog in blogs %}
+            <div style="margin-bottom: 10px; color: rgb(90, 90, 90);">
+                <a href="{% url 'detail' blog.id %}">
+                <a style="font-weight: bold;">【{{blog.author}}】/{{blog.pub_date}}</a>
+                <br>
+                {{ blog.title }}
+                </a>   
+            </div>
+            {% endfor %}
+            <div style="text-align: center; margin-top: 10px;">
+                {% if blogs.has_previous %}
+                <a href="?page={{blogs.previous_page_number}}" style="color: black; font-weight: bold;">←</a>
+                {# NowOfTotal #}
+                <span>[{{blogs.number}}</span>
+                <span>/</span>
+                <span>{{blogs.paginator.num_pages}}]</span>
                 
-               
-
-            
-            
-            
+                {% endif %}
+    
+                {% if blogs.has_next %}
+                <a href="?page={{blogs.paginator.num_pages}}" style="color: black; text-align: center; font-weight: bold;">←</a>
+                {# NowOfTotal #}
+                <span>[{{blogs.number}}</span>
+                <span>/</span>
+                <span>{{blogs.paginator.num_pages}}]</span>
+                <a href="?page={{blogs.next_page_number}}"style="color: black; text-align: center; font-weight: bold;">→</a>
+                {% endif %}
+            </div>      
+        </details>
+       
         </footer>
       </div>
     
