qna css color change

--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Nanum Gothic Coding', monospace;
 }
 h1{
-    color : #5653A6;
+    color : #E4733C;
     font-family: 'Black Han Sans', sans-serif;
     margin-top: 30px;
     margin-bottom: 30px;
