homework 더보기에서 최근거 제외

--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -39,11 +39,13 @@
             <details>
             <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">공지 더보기</summary>
             {% for notice_blog in notice_blogs %}
+            {% if forloop.counter > 1 %}
             <div style="margin-bottom: 10px;">
                 <a href="{% url 'noticedetail' notice_blog.id %}" style="color: rgb(90, 90, 90); font-size: 13px;">
                     {{ notice_blog.content }} / 마감일 : {{notice_blog.submitdate}}
                 </a>
             </div>
+            {% endif %}
             {% endfor %}
             <div style="text-align: center; margin-top: 10px;">
                 {% if notice_blogs.has_previous %}
