--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -36,7 +36,7 @@
           
             
 
-            <details>
+            <details open=True> 
             <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">공지 더보기</summary>
             {% for notice_blog in notice_blogs %}
             {% if forloop.counter > 1 %}
@@ -77,7 +77,7 @@
         <footer class="shell-footer">
             
                 <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn orange">제 출 하 기</a><br>
-        <details>
+        <details open=True>
             <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">제출된 과제</summary>
             {% for blog in blogs %}
             <div style="margin-bottom: 10px; color: rgb(90, 90, 90);">
