--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -78,7 +78,7 @@
             
                 <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn orange">제 출 하 기</a><br>
         <details open=True>
-            <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">제출된 과제</summary>
+            <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: center; margin-top: 10px;">제출된 과제</summary>
             {% for blog in blogs %}
             <div style="margin-bottom: 10px; color: rgb(90, 90, 90);">
                 <a href="{% url 'detail' blog.id %}">
