changed user name color black to white in "base.css"

--- a/page/static/page/css/base.css
+++ b/page/static/page/css/base.css
@@ -29,8 +29,8 @@ nav.navbar a {
 }
     
     .nav-item.user{
-        margin-left: 60%; 
-        color: black;
+        margin-left: 60%;
+        color: white;
     }
 
     .nav-item.nav-link.ml-auto{
