--- a/page/static/page/css/base.css
+++ b/page/static/page/css/base.css
@@ -8,28 +8,30 @@
 
 nav.navbar a {
     color:rgb(180, 179, 179);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif, !important;
     border-bottom: 0px #666;
 }
 
     nav.navbar a.navbar-brand{
         color: rgb(255, 153, 0);
         text-shadow: 1px 1px 1px gray; 
-        font-size: 25px;
-        font-family: 'Roboto', 'sans-serif';
+        font-weight: bold !important;
+        font-size: 25px, !important;
+        font-family: 'Roboto', 'sans-serif', !important;
     }
 
     nav.navbar a.nav-item.nav-link, nav.navbar a.nav-item.nav-link.active {
         color:rgb(180, 179, 179);
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Roboto', sans-serif !important;
     }
 
 .nav-item{
-    font-family: 'Noto Sans KR', sans-serif; 
+    font-family: 'Noto Sans KR', sans-serif, !important;
+    font-size: 15px !important;
 }
     
     .nav-item.user{
-        margin-left: 60%;
+        margin-left: calc(100%/1.56);
         color: white;
     }
 
@@ -40,5 +42,5 @@ nav.navbar a {
 
 .sr-only{
     color:rgb(180, 179, 179);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif, !important;
 }
