--- a/homework/static/homework/css/homeworklist.css
+++ b/homework/static/homework/css/homeworklist.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 
 .shell {
     display: grid;
@@ -28,9 +31,11 @@
     background-color: rgb(255, 153, 0);
     padding: 35px 20px;
     font-family: 'Black Han Sans', sans-serif;
+
   }
   h2{
-    font-family: 'Black Han Sans', sans-serif; 
+    font-family: 'Black Han Sans', sans-serif;
+
   }
   .shell-body {
     grid-row: 2 / 4;
@@ -51,7 +56,7 @@
   
   body {
     margin:0;
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Gothic A1', sans-serif;
   }
   .btn {
     border-radius: 5px;
@@ -62,7 +67,7 @@
     color: #fff;
     position: relative;
     display: inline-block;
-    font-family: 'Black Han Sans', sans-serif; 
+    font-family: 'Gothic A1', sans-serif;
   }
   
   .btn:active {
