--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
 body{
     background-color: #F2F2F2;
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Gothic A1', sans-serif;
 }
 h1{
     color : #E4733C;
@@ -17,7 +18,7 @@ h3,h4{
 div.entire {
     width: 100%;
     height: 100%;
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Gothic A1', sans-serif;
 }
 
 div.question_form{
@@ -26,7 +27,7 @@ div.question_form{
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Gothic A1', sans-serif;
 }
 
 div.answer_form{
@@ -35,12 +36,12 @@ div.answer_form{
     margin-right: 10px;
     margin-top: 30px;
     border: rgb(223, 213, 209) 2px solid;
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Gothic A1', sans-serif;
 }
 
 input.button{
     font-weight: bold;
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Gothic A1', sans-serif;
     border:2px #D95829 solid;
     border-radius: 4px;
     background-color: rgb(236, 225, 220);
