--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -20,12 +20,13 @@
         </header>
         <main class="shell-body">
             <h2>공지사항</h2>
-            {% if notices.author == superuser %}
+
+            {% if superuser %}
             <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항 추가</a><br>
-            {% endif %} 
-            
-         
+            {% endif %}
+
             {% for notice in notices.all reversed %}
+             
             {% if forloop.counter == 1 %}
             <p><a href="{%url 'noticedetail' notice.id %}" style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
                 <br><a style="color: red; font-weight: bold;">과제 마감 : {{notice.submitdate}}</a>
