--- a/page/static/page/css/introduce.css
+++ b/page/static/page/css/introduce.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200");
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css); .notosanskr * { font-family: 'Noto Sans KR', sans-serif; }
 
 /*
 	Visualize by TEMPLATED
@@ -1430,7 +1431,7 @@
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.65);
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: "Noto Sans KR", sans-serif;
 		font-size: 13pt;
 		font-weight: 200;
 		line-height: 1.65;
@@ -1563,7 +1564,7 @@
 		background: rgba(255, 255, 255, 0.075);
 		border-radius: 4px;
 		border: solid 1px rgba(255, 255, 255, 0.25);
-		font-family: "Courier New", monospace;
+		font-family: "Noto Sans KR", sans-serif;
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
@@ -1571,7 +1572,7 @@
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
+		font-family: "Noto Sans KR", sans-serif;
 		font-size: 0.9em;
 		margin: 0 0 2em 0;
 	}
