--- a/homework/static/homework/css/homeworknew.css
+++ b/homework/static/homework/css/homeworknew.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 * {
     box-sizing: border-box;
