--- a/homework/static/homework/css/noticenew.css
+++ b/homework/static/homework/css/noticenew.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 * {
     box-sizing: border-box;
   }
 
   body {
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif; 
     line-height: 1.5;
     margin: 0;
     background: rgb(253, 161, 22);
