--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -59,10 +59,10 @@
 
 {% block content%}
     <body>
-    <h1 style="text-align: center; text-shadow: 4px 2px 2px rgb(172, 171, 171); ">QUESTION <a style="color:#FFA13D">&</a> ANSWER</h1>
+    <h1 style="text-align: center; text-shadow: 2px 2px 2px rgb(172, 171, 171); ">QUESTION<a style="color:#FFA13D"> &</a> ANSWER</h1>
     <div class="entire">
         <div class="question_form" style="margin:13px;">
-            <h3 style="color: #D95829; text-align: center;"><a style="color: black; font-size: 20px;">{{ user.name }} </a>QUESTION</h3>
+            <h3 style="color: #D95829; text-align: center; text-shadow: 1px 1px 1px rgb(172, 171, 171);"><a style="color: black; font-size: 20px;">{{ user.name }}님 </a>질문</h3>
             <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <textarea class="question" name="question" rows="10" style="width:100%;" placeholder="질문을 입력해주세요."></textarea><br>
@@ -74,7 +74,7 @@
 
         {% for question in questions.all reversed %}
         <div id="{{ question.id }}" class="answer_form">
-            <h4 style="color: #D95829;margin-top: 5px; margin-left: 5px;">ANSWER</h4>
+            <h4 style="color: #D95829;margin-top: 5px; margin-left: 5px;text-shadow: 1px 1px 1px rgb(172, 171, 171);">답변</h4>
             <form action="{% url 'QnA' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="id" value="{{ question.id }}"/>
@@ -84,9 +84,9 @@
                 {% if question.asker == user %}
                     <div id="buttonpanel{{ question.id }}"name="revise" style="margin-left: 80%;">
                         <button type="button" id="{{ question.id }}" class="button revise" value="수정" 
-                        style="border-radius: 4px; border:2px #FFA13D solid;  font-weight: bold; font-family: 'Nanum Gothic Coding', monospace; background-color:rgb(247, 235, 217)">수정</button>
+                        style="border-radius: 4px; border:2px #FFA13D solid;  font-weight: bold; background-color:rgb(247, 235, 217)">수정</button>
                         <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제"
-                        style="border-radius: 4px; border:2px #FFA13D solid;  font-weight: bold; font-family: 'Nanum Gothic Coding', monospace; background-color:rgb(247, 235, 217)">삭제</button>
+                        style="border-radius: 4px; border:2px #FFA13D solid; font-weight: bold; background-color:rgb(247, 235, 217)">삭제</button>
                     </div>
                 {% endif %}
 
