--- a/page/static/page/css/base.css
+++ b/page/static/page/css/base.css
@@ -6,9 +6,12 @@
 
 /* nav */
 
+body{
+    font-family: "Noto Sans KR", sans-serif;
+}
+
 nav.navbar a {
     color:rgb(180, 179, 179);
-    font-family: 'Roboto', sans-serif, !important;
     border-bottom: 0px #666;
 }
 
@@ -17,16 +20,13 @@ nav.navbar a {
         text-shadow: 1px 1px 1px gray; 
         font-weight: bold !important;
         font-size: 25px, !important;
-        font-family: 'Roboto', 'sans-serif', !important;
     }
 
     nav.navbar a.nav-item.nav-link, nav.navbar a.nav-item.nav-link.active {
         color:rgb(180, 179, 179);
-        font-family: 'Roboto', sans-serif !important;
     }
 
 .nav-item{
-    font-family: 'Noto Sans KR', sans-serif, !important;
     font-size: 15px !important;
 }
     
@@ -43,5 +43,4 @@ nav.navbar a {
 
 .sr-only{
     color:rgb(180, 179, 179);
-    font-family: 'Roboto', sans-serif, !important;
 }
