--- a/page/static/page/css/introduce.css
+++ b/page/static/page/css/introduce.css
@@ -1431,7 +1431,7 @@
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.65);
-		font-family: "Noto Sans KR", sans-serif;
+		font-family: "Source Sans Pro", sans-serif;
 		font-size: 13pt;
 		font-weight: 200;
 		line-height: 1.65;
@@ -1564,7 +1564,7 @@
 		background: rgba(255, 255, 255, 0.075);
 		border-radius: 4px;
 		border: solid 1px rgba(255, 255, 255, 0.25);
-		font-family: "Noto Sans KR", sans-serif;
+		font-family: "Source Sans Pro", sans-serif;
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
@@ -1572,7 +1572,7 @@
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Noto Sans KR", sans-serif;
+		font-family: "Source Sans Pro", sans-serif;
 		font-size: 0.9em;
 		margin: 0 0 2em 0;
 	}
@@ -2564,6 +2564,7 @@
 		-webkit-transition: opacity 1s ease, -webkit-filter 1s ease;
 		-ms-transition: opacity 1s ease, -ms-filter 1s ease;
 		transition: opacity 1s ease, filter 1s ease;
+		font-family: "Source Sans Pro", sans-serif;
 	}
 
 	body.is-loading #wrapper {
