Fixed html codes

--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -1,58 +1,67 @@
 {% load static %}
 <!doctype html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{% block link %} {% endblock %}">
+
+    <!-- CSS -->
     <link href="{% static 'page/css/base.css' %}" rel="stylesheet" type="text/css">
     <title>{% block title %}{% endblock %}</title>
+
+    <!-- Jquery -->
     <script src="//code.jquery.com/jquery-1.12.4.js"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
-        function loginwarning(){
-            alert('로그인 후 이용가능한 서비스입니다');
-            {#location.href = "{% url 'login' %}";#}
+        function loginwarning() {
+            alert('로그인 후 이용가능한 서비스입니다'); {
+                #
+                location.href = "{% url 'login' %}";#
+            }
         }
     </script>
     {% block jqueryscript %}{% endblock %}
     {% block noscript %}{% endblock %}
 </head>
+
 <body>
-{#    <h1>Base.html</h1><hr>#}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="{% url 'home' %}">LIKELION CAMP</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 {% if user.is_authenticated %}
-                    <a class="nav-item nav-link active" href="{% url 'home' %}">
-                        Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
-                    <a class="nav-item nav-link " href="{% url 'homeworklist' %}">Homework</a>
-                    <a class="nav-item nav-link " href="{% url 'QnA' %}">QnA</a>
+                <a class="nav-item nav-link active" href="{% url 'home' %}">
+                    Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
+                <a class="nav-item nav-link " href="{% url 'homeworklist' %}">Homework</a>
+                <a class="nav-item nav-link " href="{% url 'QnA' %}">QnA</a>
                 {% else %}
-                    <a class="nav-item nav-link active " href="{% url 'home' %}">
-                        Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
-                    <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">Homework</a>
-                    <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">QnA</a>
+                <a class="nav-item nav-link active " href="{% url 'home' %}">
+                    Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
+                <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">Homework</a>
+                <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">QnA</a>
                 {% endif %}
             </div>
-                {% if user.is_authenticated %}
-                <a class="nav-item user">{{ user.name }}님</a>
-                <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'logout' %}">
-                    로그아웃</a>
-                {% else %}
-                <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'login' %}">
-                    로그인</a>
-                {% endif %}
-            
+            {% if user.is_authenticated %}
+            <a class="nav-item user">{{ user.name }}님</a>
+            <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'logout' %}">
+                로그아웃</a>
+            {% else %}
+            <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'login' %}">
+                로그인</a>
+            {% endif %}
+
         </div>
     </nav>
 
@@ -61,8 +70,13 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-{#    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>#}
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    {#    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>#}
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
